--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color = "primary" style="height: 20px">
   <button mat-button class="word" [routerLink]="['/home']">Partner Restaurant</button>
   <span class="fill-remaining-space"></span>
+  <button mat-button class="button" [routerLink]="['/prospect']">Search a Prospect</button>
   <button mat-button class="button" [routerLink]="['/login']">Sign in</button>
   <button mat-button class="button" [routerLink]="['/signup']">Sign up</button>
 </mat-toolbar>
