--- a/src/app/prospect/prospect.component.html
+++ b/src/app/prospect/prospect.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="container" style="
 margin-top: 30px;
 ">
@@ -29,9 +31,10 @@ margin-top: 30px;
 
 </div>
 
+
 <div *ngIf="v">
   
-        <div *ngFor="let d of prospect_data;">
+        <div *ngFor="let d of prospect_data | paginate: { itemsPerPage:3, currentPage: p}">
             <div style="width: 100%; display: table;">
               <div style="display: table-row">
                 <div style="width: 450px; display: table-cell;">
@@ -186,4 +189,10 @@ margin-top: 30px;
         
         
         </div>
+        <div style="margin-top:40px;text-align:center;">
+        <pagination-controls (pageChange)="p =$event"></pagination-controls>
         </div>
+        </div>
+
+
+    
