--- a/src/app/signup/signup/signup.component.html
+++ b/src/app/signup/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="height:690px;">
   <form [formGroup]="signupForm" (submit)=signUp()>
     <mat-card class="container">
       <mat-card-header>
