--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
   <button mat-button class="word" [routerLink]="['/login']" *ngIf="router.url == '/login' || router.url == '/signup' || router.url == '/password' ">Partner Restaurant</button>
   <button mat-button class="word" [routerLink]="['/home']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Partner Restaurant</button>
     <span class="fill-remaining-space"></span>
-   <button mat-button class="button" [routerLink]="['/prospect']">Search a Prospect</button>
+   <button mat-button class="word" [routerLink]="['/prospect']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Search a Prospect</button>
   <button mat-button class="button" (click)="onLogout()" [routerLink]="['/login']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Logout</button>
 </mat-toolbar>
  
