--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,6 +2,8 @@
   <button mat-button class="word" id="beforelogin"  [routerLink]="['/login']" *ngIf="router.url == '/login' || router.url == '/signup' || router.url == '/password' ">Partner Restaurant</button>
   <button mat-button class="word" id="afterlogin"   [routerLink]="['/home']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Partner Restaurant</button>
     <span class="fill-remaining-space"></span>
+    <button mat-button class="button" id="p_id" [routerLink]="['/prospect']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Prospect Search</button>
+    
   <button mat-button class="button" id="logoutbutton" (click)="onLogout()" [routerLink]="['/login']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Logout</button>
 
   <!-- <button mat-button class="button" [routerLink]="['/signup']">Sign up</button> -->
