--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -20,12 +20,11 @@
         <button mat-raised-button type="submit" id="loginButton" class="bottonPosition" color="primary" 
         [disabled]="!form.valid" id="loginButton">Log In</button>
       </mat-card-content>
-      <!-- <mat-card-actions class="text-right">
+      <mat-card-actions class="text-right">
         <p><a [routerLink]="['/signup']" style="text-decoration: none">Create New Account</a>
         </p>
         <a href="" style="text-decoration: none">Forgot Password</a>
-
-      </mat-card-actions> -->
+      </mat-card-actions>
     </mat-card>
   </form>
 </div>
