--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,5 +5,6 @@
     <button mat-button class="button" id="p_id" [routerLink]="['/prospect']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Prospect Search</button>
     
   <button mat-button class="button" id="logoutbutton" (click)="onLogout()" [routerLink]="['/login']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Logout</button>
+  <button mat-button class="button" (click)="signOut()">Logout from Google</button>
   <!-- <button mat-button class="button" [routerLink]="['/signup']">Sign up</button> -->
 </mat-toolbar>
